--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".ProfileActivity"
             android:exported="true" />
         <activity
-            android:name=".wordListSelect"
+            android:name=".WordListSelect"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
