--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
             android:exported="true"
             android:windowSoftInputMode="adjustPan|stateHidden">
         </activity>
+        <activity android:name=".Quiz2_retry"
+            android:exported="true">
+        </activity>
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
